allow warning-color and fix whitespace

--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -27,8 +27,8 @@
 // $background-color: #292929;
 // $post-panel-color: rgb(36, 36, 36);
 // $footer-background-color: #1f2122;
- $note-color: rgb(0, 3, 165);
-// $warning-color: #c00000; // use this or pick any from /css/pics/background folder or from transparenttextures.com
+$note-color: rgb(0, 3, 165);
+$warning-color: #c00000; // use this or pick any from /css/pics/background folder or from transparenttextures.com
 $accent-color: #007222;
 $background-pattern: '3px-tile.png'; //********************************************************
 //                  Common styles
